# slam-go2w

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  configure_git_safe_directory.sh  devcontainer.json  postCreate.sh
catmux/: online_dgkilo.yaml  online_dlio.yaml  online_fastlio.yaml  online_liosam.yaml  online_wheel_legged_odometry.yaml  playback_dgkilo.yaml  playback_dlio.yaml  playback_fastlio.yaml  playback_liosam.yaml  playback_wheel_legged_odometry.yaml  reconstruct_raw_dgkilo.yaml  reconstruct_raw_dlio.yaml  reconstruct_raw_fastlio.yaml  reconstruct_raw_liosam.yaml  reconstruct_raw_wheel_legged_odometry.yaml  record_dgkilo.yaml  record_dlio.yaml  record_dlio_output.yaml  record_fastlio.yaml  record_liosam.yaml  record_raw.yaml  record_raw_legged.yaml  record_raw_wheel_legged.yaml  record_wheel_legged_odometry.yaml
config/dgkilo/: dg_kilo.rviz  go2w.yaml
config/dlio/: dlio.rviz  dlio_world_only.rviz
config/fastlio/: fastlio.rviz
config/glim/offline/experiments/imu_time_offset_neg010/: config_ros.json
config/glim/offline/experiments/imu_time_offset_neg015/: config_ros.json
config/glim/offline/experiments/imu_time_offset_neg020/: config_ros.json
config/glim/offline/experiments/imu_time_offset_neg030/: config_ros.json
config/glim/offline/experiments/imu_time_offset_neg040/: config_ros.json
config/glim/offline/experiments/t_lidar_imu_unitree_mount/: config_sensors.json
config/glim/offline/go2w/: config_cpu.json  config_gpu.json  config_logging.json  config_preprocess.json  config_ros.json  config_sensors.json
config/liosam/: go2w.yaml  liosam.rviz
config/sensor/: bag_checker.example.yaml  go2w_calibration.yaml
config/wheel_legged_odometry/: go2w.yaml  wheel_legged_odometry.rviz
docker/desktop/glim/: Dockerfile
docker/robot/: Dockerfile  run.sh
humble_ws/src/dg_kilo/: CMakeLists.txt  LICENSE  README.md  package.xml
humble_ws/src/dg_kilo/include/dg_kilo/: common_types.hpp  degradation_detector.hpp  dg_kilo_node.hpp  factor_graph_backend.hpp  feature_extractor.hpp  go2w_kinematics.hpp  ground_constraint_factor.hpp  ground_plane_estimator.hpp  iekf.hpp  ikd_tree_wrapper.hpp  imu_processor.hpp  leg_eskf.hpp  loop_closure.hpp  lowstate_buffer.hpp  params.hpp  scan_slicer.hpp
humble_ws/src/dg_kilo/include/ikd-Tree/: ORIGIN.md
humble_ws/src/dg_kilo/launch/: dg_kilo.launch.py
humble_ws/src/dg_kilo/msg/: DegradationStatus.msg  LegOdometry.msg
humble_ws/src/dg_kilo/src/: degradation_detector.cpp  dg_kilo_node.cpp  factor_graph_backend.cpp  feature_extractor.cpp  go2w_kinematics.cpp  ground_constraint_factor.cpp  ground_plane_estimator.cpp  ikd_tree_wrapper.cpp  imu_processor.cpp  leg_eskf.cpp  loop_closure.cpp  lowstate_buffer.cpp  params.cpp  scan_slicer.cpp
humble_ws/src/dg_kilo/test/: test_degradation.cpp  test_kinematics.cpp  test_leg_eskf.cpp
humble_ws/src/dg_kilo/urdf/go2w/: LICENSE  ORIGIN.md  go2w.urdf
humble_ws/src/wheel_legged_odometry/: CMakeLists.txt  README.md  package.xml
humble_ws/src/wheel_legged_odometry/include/wheel_legged_odometry/: go2w_kinematics.hpp  odometry_estimator.hpp
humble_ws/src/wheel_legged_odometry/launch/: wheel_legged_odometry.launch.py
humble_ws/src/wheel_legged_odometry/src/: go2w_kinematics.cpp  odometry_estimator.cpp  wheel_legged_odometry_node.cpp
humble_ws/src/wheel_legged_odometry/test/: test_go2w_kinematics.cpp  test_odometry_estimator.cpp
humble_ws/src/wheel_legged_odometry/urdf/go2w/: ORIGIN.md  go2w.urdf
scripts/dgkilo/: live_rviz.sh  playback.sh  reconstruct_raw.sh
scripts/dlio/: live_rviz.sh  playback.sh  reconstruct_raw.sh  reconstruct_shared_raw.sh  record_rviz_window.sh
scripts/fastlio/: live_rviz.sh  odom_body_to_baselink.py  playback.sh  reconstruct_raw.sh
scripts/glim/: build_image.sh  run_glim_offline.sh  visualize_glim_run.sh
scripts/liosam/: hesai_to_velodyne.py  live_rviz.sh  playback.sh  reconstruct_raw.sh
scripts/wheel_legged_odometry/: live_rviz.sh  playback.sh  reconstruct_raw.sh
tools/: analyze_glim_imu_warning.py  check_glim_bag.py  compare_glim_imu_reports.py  glim_bag_utils.py
