<?xml version="1.0"?>
<package format="3">
  <name>wheel_legged_odometry</name>
  <version>0.1.0</version>
  <description>
    Minimal kinematic odometry for the Unitree Go2W using all 16 low-level
    motor states, IMU attitude/rates, and force-free wheel-ground support
    inference.
  </description>

  <maintainer email="67k.tanaka@gmail.com">Koki Tanaka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>unitree_go</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
